--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div class="todo-input-grid">
       <input class="js-name-input name-input" placeholder="to do list">
       <input class="js-date-input date-input" type="date">
+      <input class="js-time-input time-input" type="time">
       <button class="add-button" onclick="AddToDo() ">Add</button>
       
       <div class="js-to-list todo-grid"></div>
