--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <input class="js-name-input name-input" placeholder="to do list">
       <input class="js-date-input date-input" type="date">
       <input class="js-time-input time-input" type="time">
-      <button class="add-button" onclick="AddToDo() ">Add</button>
-      
+      <button class="add-button" onclick="AddToDo() ">Add</button>     
       <div class="js-to-list todo-grid"></div>
       </div>
     </div>
   </div>
+  <p class="js-note-input"></p>
   <script src="script.js"></script>
 </body>
 </html>
