add buttom row(count,deletall)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <button class="add-button" onclick="AddToDo() ">Add</button>     
       <div class="js-to-list todo-grid"></div>
       </div>
+      <div class="js-bottom-row bottom-row"></div>
     </div>
   </div>
   <p class="js-note-input"></p>
