add gif and and eventListener with keydown

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>To-do-list</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Changa+One:ital@0;1&family=Share+Tech&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <div class="card">
-    <div class="nav-bar"><p>To Do List</p></div>
+    <div class="nav-bar"><img class="gif-img" src="img/malloon-kawaii.gif"><p class="title">To Do List</p></div>
     <div class="nav-list">
     <div class="todo-input-grid">
       <input class="js-name-input name-input" placeholder="to do list">
